k8s/participant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: participant-service
  namespace: eventhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: participant-service
  template:
    metadata:
      labels:
        app: participant-service
    spec:
      containers:
      - name: participant-service
        image: claraaitm/eventhub-participant:latest
        ports:
        - containerPort: 8000
