k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: eventhub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: claraaitm/eventhub-event:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: eventhub
spec:
  selector:
    app: event-service
  ports:
  - port: 8000
    targetPort: 8000
